--- a/package.json
+++ b/package.json
@@ -4,6 +4,17 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "ibm-watson": "^5.7.0"
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "ibm-watson": "^5.7.0",
+    "multer": "^1.4.2"
+  },
+  "scripts": {
+    "start": "nodemon src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
