--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "engines": {
+    "node": ">=0.12"
+  },
   "dependencies": {
     "@google-cloud/speech": "^4.1.2",
     "body-parser": "^1.19.0",
